--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,6 @@
 <!--pages/home/home.wxml-->
 <view class="placeholder" wx:if="{{placeholderFigureVisible}}">
-  <image src="../../assets/placeholder.jpg" mode="widthFix"></image>
+  <image class="home-img " src="../../assets/placeholder.jpg"></image>
 </view>
 <view class="home" wx:if="{{!placeholderFigureVisible}}">
   <view class="topPlace">
