--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,3 +1,14 @@
+.placeholder {
+  width: 100vw;
+  height: 100vh;
+}
+
+.home-img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .home {
   width: 100%;
   position: relative;
