--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -40,3 +40,11 @@
   margin-top: 40px;
   margin-bottom: 40px;
 }
+
+.question{
+  color: rgb(135, 16, 190);
+  font-size: 16px;
+  text-align: center;
+  margin-top: 32px;
+  margin-bottom: 40px;
+}
