--- a/pages/preview/preview.wxss
+++ b/pages/preview/preview.wxss
@@ -1,92 +1,83 @@
-.title {
-  color: #046635;
-  font-size: 34px;
-  text-align: center;
-  margin-top: 16px;
-}
-
-.arrow {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.arrow > .wrapper {
-  width: 240px;
-  height: 240px;
-  margin-top: 20px;
-  background-color: #046635;
-  border-radius: 50%;
-  animation: bump 0.98s linear infinite;
+.preview-wrapper {
+  min-height: 100vh;
+  background-color: #F3F7F6;
   position: relative;
 }
-
-@keyframes bump {
-  0%, 100% {
-    transform: scale(0.9);
-  }
-  50% {
-    transform: scale(1.1);
-  }
+.preview-bg {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
-
-.arrow > .wrapper > .left {
-  height: 30px;
-  width: 110px;
-  border-radius: 10px;
-  background-color: white;
-  position: absolute;
-  top: 75px;
-  left: 36px;
-  transform: rotateZ(-45deg);
-}
-
-.arrow > .wrapper > .right {
-  height: 30px;
-  width: 110px;
-  border-radius: 10px;
-  background-color: white;
-  position: absolute;
-  top: 75px;
-  right: 36px;
-  transform: rotateZ(45deg);
-}
-
-.arrow > .wrapper > .axis {
-  width: 30px;
-  height: 130px;
-  border-radius: 10px;
-  background-color: white;
-  position: absolute;
-  top: 70px;
-  left: 105px;
-}
-
-.time {
-  color: #046635;
-  margin-top: 16px;
-  margin-bottom: 20px;
+.basic-info {
+  width: 90%;
+  background-color: #fff;
+  border-radius: 20px;
   text-align: center;
-  font-size: 20px;
-}
-
-.info {
-  height: 180px;
-  padding: 20px;
-  background-color: #046635;
+  position: absolute;
+  top: 55px;
+  left: 18px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
 }
-
-.info > view {
-  color: #fbf6f6;
-  font-size: 20px;
+.basic-info .imgs {
+  position: relative;
 }
-
-.info .key {
-  width: 90px;
-  display: inline-block;
-  text-align: justify;
-  text-align-last: justify;
+.basic-info .imgs .avatar {
+  border: 1px solid #000;
+  width: 160px;
+  height: 160px;
+  margin-top: 30px;
+  border-radius: 50%;
+}
+.basic-info .imgs .pass-status-wrapper {
+  padding: 3px;
+  margin-top: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  left: 120px;
+  top: 110px;
+}
+.basic-info .imgs .pass-status-wrapper .pass-status {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.basic-info .texts .name {
+  margin-top: 30px;
+  font-size: 25px;
+  color: #6E696B;
+}
+.basic-info .texts .stuid {
+  margin-top: 5px;
+  font-size: 18px;
+  color: #AFAFAF;
+}
+.basic-info .texts .pass-auth {
+  margin-top: 10px;
+  font-size: 32px;
+}
+.basic-info .texts .pass-auth .permission {
+  color: #40C971;
+}
+.basic-info .texts .pass-auth .prohibit {
+  color: #FF0A08;
+}
+.basic-info .texts .gatename {
+  margin-top: 24px;
+  font-size: 18px;
+}
+.basic-info .texts .gatename .entry {
+  color: #40C971;
+}
+.basic-info .texts .time {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.copyright {
+  margin-top: 40px;
+  text-align: center;
+  position: relative;
+  top: 320px;
 }
